--- a/lab3/index.html
+++ b/lab3/index.html
@@ -14,19 +14,31 @@
     <div class="body">
         <div class="vertical-menu" id="menu">
             <a href="#" class="active">Home</a>
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-            <a href="#">Link 4</a>
+            <a href="#">Home</a>
+            <a href="#">Top Read</a>
+            <a href="#">New Writed</a>
+            <a href="#">Your Favorite</a>
         </div>
         <div class="content">
-            <p>
-                Blog optimization
+            <div class='main'>
+                <div class="text"> <p>
+                 #Optimization * Best of month
             </p>
-            <h1>Tran Manh</h1>
+            <h1 class="read1">Rectified Adam - Longer Time for Better Result</h1>
+           <p class="read"> RAdam is arguably the new state of the art optimizer for AI
+As you can see, RAdam provides a dynamic heuristic to provide automated variance reduction and thus removes the need and manual tuning involved with a warmup during training.
+In addition, RAdam is shown to be more robust to learning rate variations (the most important hyperparameter) and provides better training accuracy and generalization on a variety of datasets and within a variety of AI architectures.
+In short, I’d highly recommend you drop RAdam into your AI architecture and see if you don’t get an immediate benefit. I’d offer a money back guarantee but since the cost for it is $0.00… :)
+RAdam is available for PyTorch at their official github here.</p>
+                
+                <img src="/rAdam.jpeg" width=500px height=500px/>
+                </div>
+            
+        </div>
         </div>
         <div class="chatbox">
             <p>Contact to me:</br> mantran@gmail.com</p>
+    <img src="next.png" height=70px width=70px/>
         </div>
     </div>
     <div class="footer">
